--- a/000_dockerfile/postgresql.conf
+++ b/000_dockerfile/postgresql.conf
@@ -13,6 +13,6 @@ lc_numeric = 'en_US.utf8'			# locale for number formatting
 lc_time = 'en_US.utf8'				# locale for time formatting
 default_text_search_config = 'pg_catalog.english'
 
-shared_preload_libraries='pg_stat_statements,pgaudit,auto_explain'
-#pg_hint_plan
+shared_preload_libraries='pg_stat_statements,pgaudit,auto_explain,pg_hint_plan'
+
 
