--- a/000_dockerfile/postgresql.conf
+++ b/000_dockerfile/postgresql.conf
@@ -5,8 +5,8 @@ dynamic_shared_memory_type = posix	# the default is the first option
 max_wal_size = 1GB
 min_wal_size = 80MB
 datestyle = 'iso, mdy'
-#timezone = 'Etc/UTC'
-timezone = 'Australia/Sydney'
+timezone = 'Etc/UTC'
+#timezone = 'Australia/Sydney'
 lc_messages = 'en_US.utf8'			# locale for system error message
 lc_monetary = 'en_US.utf8'			# locale for monetary formatting
 lc_numeric = 'en_US.utf8'			# locale for number formatting
@@ -15,4 +15,34 @@ default_text_search_config = 'pg_catalog.english'
 
 shared_preload_libraries='pg_stat_statements,pgaudit,auto_explain,pg_hint_plan'
 
+# ===================================================
+# Log
+# ===================================================
+log_destination = 'stderr'
+logging_collector = on
+log_directory = 'log'
+log_file_mode = 0600
+log_filename = 'postgresql-%d.log'
+log_truncate_on_rotation = on
+log_hostname = on
+log_rotation_age = 1d
+log_rotation_size = 0
+log_min_duration_statement = 5000ms
+log_statement = 'ddl'
+log_line_prefix = '%t:%r:%u@%d:[%p]: '    # %t=timestamp without milliseconds, %r=remote host and port %u=user name %d=database name %p=process ID
+log_timezone =   'Etc/UTC'
+log_connections = 1
+log_disconnections = 1
+log_lock_waits = 1
 
+# ===================================================
+# auto_explain
+# ===================================================
+auto_explain.log_min_duration = 5000
+auto_explain.log_verbose = 1
+
+# ===================================================
+# session timeout
+# ===================================================   
+idle_in_transaction_session_timeout = 7200000
+statement_timeout = 7200000
